# planet-gen

./: .gitignore  CLAUDE.md  Cargo.toml  Plans.md  README.md
.claude/: hooks.json  settings.json  settings.local.json
.claude/logs/: subagent-history.jsonl
.github/workflows/: ci.yml
blender_addon/: __init__.py
docs/: CODEBASE_AUDIT_2026-04-03.md  deep-review-research-vs-implementation.md
docs/brainstorms/: 2026-03-29-planet-gen-requirements.md  2026-03-30-erosion-redesign-requirements.md  2026-03-30-gradient-biomes-requirements.md  2026-03-30-physics-driven-terrain-requirements.md  2026-03-30-tectonic-terrain-requirements.md  2026-03-31-cloud-layer-requirements.md  2026-04-01-tectonic-boundary-classification-requirements.md  2026-04-02-layer-toggle-system-requirements.md  2026-04-02-physics-terrain-rebuild-requirements.md  2026-04-03-multipass-plate-terrain-requirements.md  2026-04-03-orogen-port-requirements.md
docs/plans/: 2026-03-30-001-feat-visual-control-parameters-plan.md  2026-03-30-002-feat-physics-driven-terrain-plan.md  2026-03-30-003-feat-tectonic-terrain-plan.md  2026-03-30-004-feat-erosion-redesign-plan.md  2026-03-30-004-fix-height-aware-climate-plan.md  2026-03-30-005-feat-hydraulic-erosion-plan.md  2026-03-30-006-feat-pbr-surface-rendering-plan.md  2026-03-30-007-feat-realistic-atmosphere-plan.md  (+14 more)
hooks/: post-tool.sh  pre-tool.sh
src/: app.rs  compute.rs  cube_sphere.rs  export.rs  gpu.rs  healpix.rs  healpix_terrain.rs  lib.rs  main.rs  noise.rs  planet.rs  plate_sim.rs  plates.rs  preview.rs  terrain.rs  terrain_compute.rs
(+69 files in other folders)
